--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="city">City</string>
     <string name="save">Save Data</string>
     <string name="kill">Kill Activity</string>
+    <string name="clear">Clear</string>
 </resources>
